# AI-Financial-Goal-Planner

./: .env.example  .gitignore
Backend/: .dockerignore  output.txt  requirements.txt  verify_phase1.py
Backend/app/: Dockerfile  databse.py  main.py
Backend/app/models/: calculation.py  db.py  user.py
Backend/app/routes/: auth.py  calaculation.py  goals.py  user.py
Backend/app/schemas/: calculation.py  goals.py  user.py
Backend/app/services/: auth.py  one_time_agent_prompt.txt  recurring_agent_prompt.txt  retirement_agent_prompt.txt  utils.py
Backend/app/services/math/: goals.py  (+2 more)
Backend/app/utils/: log_format.py
Backend/tests/: conftest.py  test_e2e_smoke.py
Backend/tests/integration_test/: test_calculations.py  test_one_time_goal.py  test_retirement.py
Backend/tests/unit_test/: test_calculation.py  test_conflict_engine.py  test_one_time_goal.py  test_retirement.py
blockchain/: README.md  test-frontend.html
blockchain/api/: .env.example  Cargo.toml  Dockerfile
blockchain/api/abi/: AdvisorAgreement.json  FinancialPassport.json
blockchain/api/src/: config.rs  main.rs
blockchain/api/src/contracts/: advisor.rs  mod.rs  passport.rs
blockchain/api/src/middleware/: auth.rs
blockchain/api/src/routes/: advisors.rs  events.rs  identity.rs  mod.rs  passport.rs
blockchain/contracts/: foundry.toml
blockchain/contracts/script/: DeployAdvisorAgreement.s.sol  DeployFinancialPassport.s.sol
blockchain/contracts/src/: AdvisorAgreement.sol  FinancialPassport.sol  IERC5192.sol
blockchain/contracts/test/: AdvisorAgreement.t.sol  FinancialPassport.t.sol
(+1 files in other folders)
