[package]
name = "goalpath-chain-api"
version = "0.1.0"
edition = "2021"
description = "GoalPath AI Blockchain Bridge API — Rust Axum service connecting the Python backend to Solidity contracts on Sepolia"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Ethereum
ethers = { version = "2", features = ["abigen", "ws", "rustls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hex encoding
hex = "0.4"

# Error handling
thiserror = "2"
anyhow = "1"

# Async utilities
once_cell = "1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
